@@ -1,10 +1,9 @@
 /**
  * @test  /nodynamiccopyright/
- * @bug 5012028 6384539 8074364 8250741
+ * @bug 5012028 6384539 8074364 8250741 8246774
  * @summary javac crash when declare an annotation type illegally
  *
  * @compile/fail/ref=IllegalAnnotation.out -XDrawDiagnostics IllegalAnnotation.java
- * @compile/fail/ref=IllegalAnnotation.out -XDrawDiagnostics --enable-preview -source ${jdk.version} IllegalAnnotation.java
  */
 class IllegalAnnotation {
     {
